--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,14 +3,8 @@
   <head>
     <title>TryUpload</title>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
-    <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.js"></script>
-    <script type="text/javascript" src="/javascripts/jquery-ui-1.8.13.custom.min.js"></script>
-    <link rel="stylesheet" href="/stylesheets/ui-lightness/jquery-ui-1.8.13.custom.css" type="text/css" media="screen" />
-    <script type="text/javascript" src="/javascripts/jquery.fileupload.js"></script>
-    <script type="text/javascript" src="/javascripts/jquery.fileupload-ui.js"></script>
-    <script type="text/javascript" src="/javascripts/jquery.iframe-transport.js"></script>
-    <link rel="stylesheet" href="/stylesheets/jquery.fileupload-ui.css" type="text/css" media="screen" />
     <script type="text/javascript" src="/javascripts/application.js"></script>
+    <link rel="stylesheet" href="/stylesheets/application.css" type="text/css" media="screen" />
     <%= csrf_meta_tag %>
   </head>
   <body>
