add html5 based file uploader

--- a/app/views/uploads/index.html.erb
+++ b/app/views/uploads/index.html.erb
@@ -1,17 +1,13 @@
-<div id="fileupload">
-  <form method="POST" enctype="multipart/form-data" id="form1" action="/uploads">
-    <div class="row">
-      <label class="filetoUpload"> Select Files to Upload </label><br />
-      <input type="file" name="files[]" multiple>
-    </div>    
-    <div id="fileName"></div>
-    <div id="fileSize"></div>
-    <div id="fileType"></div>
-    <div class="row">
-      <input type="button" onclick="uploadFile()" value="Upload" />
-    </div>
-
-    <div id="progressNumber"></div>
-  </form>
-</div>
-
+<form id="form1" enctype="multipart/form-data" method="post" action="/uploads">
+  <div class="row">
+    <label for="fileToUpload">Select a File to Upload</label><br />
+    <input type="file" name="fileToUpload" id="fileToUpload"/>
+  </div>
+  <div id="fileName"></div>
+  <div id="fileSize"></div>
+  <div id="fileType"></div>
+  <div class="row">
+    <input type="button" id="uploadFile" value="Upload" />
+  </div>
+  <div id="progressNumber"></div>
+</form>
