--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>TryUpload</title>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+    <script type="text/javascript" src="/javascripts/underscore.js"></script>
     <script type="text/javascript" src="/javascripts/application.js"></script>
     <link rel="stylesheet" href="/stylesheets/application.css" type="text/css" media="screen" />
     <%= csrf_meta_tag %>
